SLING-13117 Include Integration Tests (#17)